kustomize/overlays/local/ingress-prometheus/ingress.yaml
---
#--------------------------------------------------
# Ingress
# https://kubernetes.io/docs/concepts/services-networking/ingress/
#--------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  # echo 127.0.0.1 prometheus-server.local >> /etc/hosts
  - host: prometheus-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
